View Issue Details

IDProjectCategoryView StatusLast Update
0027196CommunityOCCT:Configurationpublic2016-04-20 15:49
ReporterabvAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Target Version7.0.0Fixed in Version7.0.0 
Summary0027196: CMake - avoid setting option -EHa for compilers other than MSVC
DescriptionAs reported in http://dev.opencascade.org/index.php?q=node/1148, CMake scripts for OCCT set option -EHa on Windows (if WIN32 is defined) regardless of the used compiler. This option should be used only for MSVC compiler.
Steps To Reproducetry building under MinGW
TagsNo tags attached.
Test case number

Relationships

related to 0027197 closedabv Open CASCADE Configuration - fix compilation issues when using mingw 

Activities

git

2016-02-22 11:03

administrator   ~0051057

Branch CR27196 has been created by abv.

SHA-1: 8a7e2bb72f1c4014470ae5521ac59c9671ca51ea


Detailed log of new commits:

Author: abv
Date: Mon Feb 22 11:03:27 2016 +0300

    0027196: CMake - avoid setting option -EHa for compilers other than MSVC
    
    Option -EHa is now added only if MSVC is defined.
    
    Descriptions of option -fp:precise in CMake and method OSD::SetSignal() in header file are updated.

abv

2016-02-22 11:19

manager   ~0051058

The fix pushed to CR27196, please review

ibs

2016-02-22 12:28

developer   ~0051059

the patch has been reviewed without remarks

git

2016-04-17 12:57

administrator   ~0052785

Branch CR27196 has been deleted by kgv.

SHA-1: 8a7e2bb72f1c4014470ae5521ac59c9671ca51ea

Related Changesets

occt: master cb728702

2016-02-22 08:03:27

abv


Committer: bugmaster Details Diff
0027196: CMake - avoid setting option -EHa for compilers other than MSVC

Option -EHa is now added only if MSVC is defined.

Descriptions of option -fp:precise in CMake and method OSD::SetSignal() in header file are updated.
Affected Issues
0027196
mod - adm/cmake/occt_defs_flags.cmake Diff File
mod - src/OSD/OSD.hxx Diff File

Issue History

Date Modified Username Field Change
2016-02-22 10:15 abv New Issue
2016-02-22 10:15 abv Assigned To => bugmaster
2016-02-22 11:03 git Note Added: 0051057
2016-02-22 11:19 abv Note Added: 0051058
2016-02-22 11:19 abv Assigned To bugmaster => ibs
2016-02-22 11:19 abv Status new => resolved
2016-02-22 11:19 abv Steps to Reproduce Updated
2016-02-22 12:28 ibs Note Added: 0051059
2016-02-22 12:28 ibs Assigned To ibs => bugmaster
2016-02-22 12:28 ibs Status resolved => reviewed
2016-02-22 22:09 kgv Relationship added related to 0027197
2016-03-03 12:38 bugmaster Status reviewed => tested
2016-03-04 16:52 bugmaster Changeset attached => occt master cb728702
2016-03-04 16:52 bugmaster Status tested => verified
2016-03-04 16:52 bugmaster Resolution open => fixed
2016-04-17 12:57 git Note Added: 0052785
2016-04-20 15:43 aiv Fixed in Version => 7.0.0
2016-04-20 15:49 aiv Status verified => closed