0027196: CMake - avoid setting option -EHa for compilers other than MSVC

Option -EHa is now added only if MSVC is defined.

Descriptions of option -fp:precise in CMake and method OSD::SetSignal() in header file are updated.